--- a/build.gradle
+++ b/build.gradle
@@ -3,29 +3,23 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
   id "au.com.dius.pact" version "4.2.0"
+  id "io.freefair.lombok" version "6.6"
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '15'
 
 repositories {
 	mavenCentral()
 }
 
-configurations {
-  compileOnly {
-    extendsFrom annotationProcessor
-  }
-}
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation "org.apache.httpcomponents:fluent-hc:4.5.5"
-	testCompile 'au.com.dius.pact.consumer:junit5:4.2.18'
+	implementation 'com.graphql-java:graphql-java:20.0'
 
-  compileOnly 'org.projectlombok:lombok'
-  annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'au.com.dius.pact.consumer:junit5:4.2.18'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
