--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.2.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+	id 'org.springframework.boot' version '3.3.4'
+	id 'io.spring.dependency-management' version '1.1.6'
 	id 'java'
-  id "au.com.dius.pact" version "4.2.0"
-  id "io.freefair.lombok" version "6.6"
+  id "au.com.dius.pact" version "4.5.13"
+  id "io.freefair.lombok" version "8.10.2"
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '15'
+java {
+	sourceCompatibility = '17'
+}
 
 repositories {
 	mavenCentral()
@@ -16,10 +18,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation "org.apache.httpcomponents:fluent-hc:4.5.5"
-	implementation 'com.graphql-java:graphql-java:20.0'
+	implementation "org.apache.httpcomponents:fluent-hc:4.5.14"
+	implementation 'com.graphql-java:graphql-java:22.3'
 
-	testImplementation 'au.com.dius.pact.consumer:junit5:4.2.18'
+	testImplementation 'au.com.dius.pact.consumer:junit5:4.5.13'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
